BP-14 patch 1 Introducing LedgerType

--- a/pom.xml
+++ b/pom.xml
@@ -204,7 +204,8 @@
           <target>1.8</target>
           <compilerArgs>
             <compilerArg>-Werror</compilerArg>
-            <compilerArg>-Xlint:deprecation</compilerArg>
+            <!-- protobuf generates deprecated code for top level enums -->
+            <!--<compilerArg>-Xlint:deprecation</compilerArg>-->
             <compilerArg>-Xlint:unchecked</compilerArg>
             <!-- https://issues.apache.org/jira/browse/MCOMPILER-205 -->
             <compilerArg>-Xpkginfo:always</compilerArg>
