--- a/compat-deps/bookkeeper-server-compat-4.0.0/pom.xml
+++ b/compat-deps/bookkeeper-server-compat-4.0.0/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <artifactId>compat-deps</artifactId>
     <groupId>org.apache.bookkeeper</groupId>
-    <version>4.5.1</version>
+    <version>4.5.1-SNAPSHOT</version>
   </parent>
   <groupId>org.apache.bookkeeper</groupId>
   <artifactId>bookkeeper-server-compat400</artifactId>
