--- a/bookkeeper-common/pom.xml
+++ b/bookkeeper-common/pom.xml
@@ -47,6 +47,11 @@
       <version>${commons-lang3.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.errorprone</groupId>
+      <artifactId>error_prone_annotations</artifactId>
+      <version>2.1.2</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
