--- a/site/_data/sidebar.yaml
+++ b/site/_data/sidebar.yaml
@@ -28,6 +28,8 @@ groups:
     endpoint: metrics
   - name: Upgrade
     endpoint: upgrade
+  - name: BookKeeper http endpoint
+    endpoint: http
   #- name: Geo-replication
   #  endpoint: geo-replication
   #- name: Customized placement policies
