[md_proxy2 6/14] Pluggable interface to resolve bookie address from name (#40)
* Pluggable interface to resolve bookie address from name

--- a/streamstore/client/pom.xml
+++ b/streamstore/client/pom.xml
@@ -37,6 +37,11 @@
       <artifactId>stream-api</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.bookkeeper</groupId>
+      <artifactId>bookkeeper-server</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
