--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -75,6 +75,11 @@
       <artifactId>netty-buffer</artifactId>
       <version>${netty-buffer.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.grpc</groupId>
+      <artifactId>grpc-all</artifactId>
+      <version>${grpc-all.version}</version>
+    </dependency>
   </dependencies>
   <build>
     <extensions>
