--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,14 @@
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+          <compilerArgs>
+            <!-- waiting https://github.com/apache/bookkeeper/issues/691 -->
+            <!--compilerArg>-Werror</compilerArg-->
+            <compilerArg>-Xlint:deprecation</compilerArg>
+            <compilerArg>-Xlint:unchecked</compilerArg>
+            <!-- https://issues.apache.org/jira/browse/MCOMPILER-205 -->
+            <compilerArg>-Xpkginfo:always</compilerArg>
+	  </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
