Issue 688: add bookkeeper-all package and update notice files
- move src/ to bookkeeper-dist/src/
- built two packages in bookkeeper-dist: one is `bookkeeper-server` - server only package with prometheus stats provider and vertx http server,
  the other one is `bookkeeper-all` - includes all packages.
- remove assembly plugin from bookkeeper-server module
- update release guide

--- a/bookkeeper-dist/all/pom.xml
+++ b/bookkeeper-dist/all/pom.xml
@@ -102,7 +102,7 @@
           <finalName>bookkeeper-all-${project.version}</finalName>
           <attach>false</attach>
           <descriptors>
-            <descriptor>../src/assemble/bin.xml</descriptor>
+            <descriptor>../src/assemble/bin-all.xml</descriptor>
           </descriptors>
         </configuration>
         <executions>
