--- a/bookkeeper-dist/pom.xml
+++ b/bookkeeper-dist/pom.xml
@@ -51,7 +51,7 @@
         <configuration>
           <finalName>bookkeeper-${project.version}</finalName>
           <descriptors>
-            <descriptor>../src/assemble/src.xml</descriptor>
+            <descriptor>src/assemble/src.xml</descriptor>
           </descriptors>
         </configuration>
         <executions>
