Shade bookkeeper-common into bookkeeper-server
bookkeeper-server extends some interfaces from bookkeeper-common which
in turn use guava. As guava is shaded and relocated, we need to shade
the common module also, so that it can find the guava classes.

--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -210,6 +210,7 @@
               <shadeTestJar>true</shadeTestJar>
               <artifactSet>
                 <includes>
+                  <include>org.apache.bookkeeper:bookkeeper-common</include>
                   <include>org.apache.bookkeeper:bookkeeper-proto</include>
                   <include>com.google.protobuf:protobuf-java</include>
                   <include>com.google.guava:guava</include>
