ISSUE #230: Enable checkstyle on the bookie tests
This completes #230. Now checkstyle verification is enabled for the
entire bookkeeper-server package.

--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -365,7 +365,7 @@
         </dependencies>
         <configuration>
           <configLocation>bookkeeper/checkstyle.xml</configLocation>
-          <suppressionsLocation>bookkeeper/server-suppressions.xml</suppressionsLocation>
+          <suppressionsLocation>bookkeeper/suppressions.xml</suppressionsLocation>
           <consoleOutput>true</consoleOutput>
           <failOnViolation>true</failOnViolation>
           <includeResources>false</includeResources>
