Use rocksdb version from a variable

--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -42,7 +42,7 @@
     <dependency>
       <groupId>org.rocksdb</groupId>
       <artifactId>rocksdbjni</artifactId>
-      <version>5.8.6</version>
+      <version>${rocksdb.version}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
