Replace observer/observable with a simplified watcher/watchable implementation
- long poll only need one-time notification on lac updates
- replace observer/observable with a simplified watcher/watchable implementation. watchers are removed after they are fired.
- add `RecycableHashSet` for `Watchable` keeping the list of watchers
- object pooling on `Watchable` and `LastAddConfirmedUpdateNotification`

--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -127,6 +127,11 @@
       <artifactId>jna</artifactId>
       <version>3.2.7</version>
     </dependency>
+    <dependency>
+      <groupId>io.reactivex.rxjava2</groupId>
+      <artifactId>rxjava</artifactId>
+      <version>${rxjava.version}</version>
+    </dependency>
     <!--
         Annoying dependency we need to include because
         zookeeper uses log4j and so we transatively do, but
