--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,15 @@ matrix:
   include:
     - os: osx
       osx_image: xcode8
+    - os: osx
+      osx_image: xcode9.2
     - os: linux
       env: CUSTOM_JDK="oraclejdk8"
+    - os: linux
+      env: CUSTOM_JDK="oraclejdk9"
+    - os: linux
+      dist: trusty
+      env: CUSTOM_JDK="openjdk8"
 
 before_install:
   - echo "MAVEN_OPTS='-Xmx3072m -XX:MaxPermSize=512m'" > ~/.mavenrc
