(@bug W-4556980@) Reduce excessive CPU usage on client side: add crc32c with SSE processor instruction support, benchmark to make sure it is better than crc32

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
     <module>bookkeeper-http</module>
     <module>tests</module>
     <module>bookkeeper-dist</module>
+    <module>microbenchmarks</module>
   </modules>
   <mailingLists>
     <mailingList>
