Provide a checksum factory to wrap over different crc32 and crc32c implementations

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -32,6 +32,7 @@
     <module>bookkeeper-server-compat-4.1.0</module>
     <module>bookkeeper-server-compat-4.2.0</module>
     <module>backward</module>
+    <module>jmh</module>
   </modules>
   <build>
     <plugins>
