--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -574,3 +574,42 @@ zkEnableSecurity=false
 # This provides the plugin run extra services along with a bookie server.
 #
 # extraServerComponents=
+
+
+#############################################################################
+## DB Ledger storage configuration
+#############################################################################
+
+# These configs are used when the selected 'ledgerStorageClass' is
+# org.apache.bookkeeper.bookie.storage.ldb.DbLedgerStorage
+
+# Size of Write Cache. Memory is allocated from JVM direct memory.
+# Write cache is used to buffer entries before flushing into the entry log
+# For good performance, it should be big enough to hold a sub
+# dbStorage_writeCacheMaxSizeMb=512
+
+# Size of Read cache. Memory is allocated from JVM direct memory.
+# This read cache is pre-filled doing read-ahead whenever a cache miss happens
+# dbStorage_readAheadCacheMaxSizeMb=256
+
+# How many entries to pre-fill in cache after a read cache miss
+# dbStorage_readAheadCacheBatchSize=1000
+
+## RocksDB specific configurations
+## DbLedgerStorage uses RocksDB to store the indexes from
+## (ledgerId, entryId) -> (entryLog, offset)
+
+# Size of RocksDB block-cache. For best performance, this cache
+# should be big enough to hold a significant portion of the index
+# database which can reach ~2GB in some cases
+# Default is 256 MBytes
+# dbStorage_rocksDB_blockCacheSize=268435456
+
+# Other RocksDB specific tunables
+# dbStorage_rocksDB_writeBufferSizeMB=64
+# dbStorage_rocksDB_sstSizeInMB=64
+# dbStorage_rocksDB_blockSize=65536
+# dbStorage_rocksDB_bloomFilterBitsPerKey=10
+# dbStorage_rocksDB_numLevels=-1
+# dbStorage_rocksDB_numFilesInLevel0=4
+# dbStorage_rocksDB_maxSizeInLevel1MB=256
