ISSUE #878: add .checkstyle file to apache-rat-plugin exclusion list
- eclipse/checkstyle plugin autogenerates .checkstyle file in all the
projects/modules. So it has to be added to the exclusion list,
otherwise apache-rat:check (mvn clean apache-rat:check install
spotbugs:check) would fail because of these files with unknown
Apache License header.

--- a/bookkeeper-proto/pom.xml
+++ b/bookkeeper-proto/pom.xml
@@ -46,6 +46,7 @@
             <exclude>**/DataFormats.java</exclude>
             <exclude>**/BookkeeperProtocol.java</exclude>
             <exclude>**/DbLedgerStorageDataFormats.java</exclude>
+            <exclude>**/.checkstyle</exclude>
           </excludes>
         </configuration>
       </plugin>
