--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
   </ciManagement>
   <modules>
     <module>buildtools</module>
-    <module>bookkeeper-checksum</module>
+    <module>circe-checksum</module>
     <module>bookkeeper-common</module>
     <module>bookkeeper-stats</module>
     <module>bookkeeper-proto</module>
