Add crc32c integer/long checksum utils under `com.scurrilous.circe.checksum`

--- a/pom.xml
+++ b/pom.xml
@@ -318,6 +318,7 @@
             <exclude>**/*.iml</exclude>
             <exclude>site/**</exclude>
             <exclude>.repository/**</exclude>
+            <exclude>**/META-INF/**</exclude>
           </excludes>
           <consoleOutput>true</consoleOutput>
         </configuration>
