--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -202,19 +202,16 @@
         </configuration>
         <executions>
           <execution>
+            <id>create-shaded-jar</id>
             <phase>package</phase>
             <goals>
               <goal>shade</goal>
             </goals>
             <configuration>
               <createDependencyReducedPom>true</createDependencyReducedPom>
-              <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
-              <shadedArtifactAttached>true</shadedArtifactAttached>
-              <shadedClassifierName>shaded</shadedClassifierName>
-              <minimizeJar>true</minimizeJar>
-              <shadeTestJar>true</shadeTestJar>
               <artifactSet>
                 <includes>
+                  <include>org.apache.bookkeeper:bookkeeper-common</include>
                   <include>org.apache.bookkeeper:bookkeeper-proto</include>
                   <include>com.google.protobuf:protobuf-java</include>
                   <include>com.google.guava:guava</include>
@@ -223,7 +220,7 @@
               <relocations>
                 <relocation>
                   <pattern>com.google.protobuf</pattern>
-                  <shadedPattern>bk-shade.com.google.proto_${protobuf.version}</shadedPattern>
+                  <shadedPattern>bk-shade.com.google.proto</shadedPattern>
                 </relocation>
                 <relocation>
                   <pattern>com.google</pattern>
@@ -319,12 +316,6 @@
             <fileset>
               <directory>${project.libdir}</directory>
               <followSymlinks>false</followSymlinks>
-            </fileset>
-            <fileset>
-              <directory>${project.basedir}</directory>
-              <includes>
-                <include>dependency-reduced-pom.xml</include>
-              </includes>
             </fileset>
           </filesets>
 	</configuration>
