--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -317,6 +317,12 @@
               <directory>${project.libdir}</directory>
               <followSymlinks>false</followSymlinks>
             </fileset>
+            <fileset>
+              <directory>${project.basedir}</directory>
+              <includes>
+                <include>dependency-reduced-pom.xml</include>
+              </includes>
+            </fileset>
           </filesets>
 	</configuration>
       </plugin>
