--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -220,7 +220,7 @@
               <relocations>
                 <relocation>
                   <pattern>com.google.protobuf</pattern>
-                  <shadedPattern>bk-shade.com.google.proto</shadedPattern>
+                  <shadedPattern>bk-shade.com.google.proto_${protobuf.version}</shadedPattern>
                 </relocation>
                 <relocation>
                   <pattern>com.google</pattern>
