--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -286,6 +286,18 @@
         </executions>
       </plugin>
       <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>2.5</version>
+	<configuration>
+	  <filesets>
+            <fileset>
+              <directory>${project.libdir}</directory>
+              <followSymlinks>false</followSymlinks>
+            </fileset>
+          </filesets>
+	</configuration>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>${maven-javadoc-plugin.version}</version>
