ISSUE #590 (@bug W-4556980@) Reduce excessive CPU usage on client side: add crc32c
…2c with SSE processor instruction support, benchmark to make sure it is better than crc32

Descriptions of the changes in this PR:

CRC32C for bookkeeper

Master Issue: #590

Author: Andrey Yegorov <ayegorov@salesforce.com>

Reviewers: Enrico Olivelli <eolivelli@gmail.com>, Sijie Guo <sijie@apache.org>, Matteo Merli <mmerli@apache.org>

This closes #856 from dlg99/feature/crc32c, closes #590

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
     <module>shaded</module>
     <module>tests</module>
     <module>bookkeeper-dist</module>
+    <module>microbenchmarks</module>
   </modules>
   <mailingLists>
     <mailingList>
