Issue 935: Issue 915: Part 3 - Make circe-checksum module work for both java 8 and java 9
- switch from jmockit to mockito, and from testng to junit. make testing and mocking framework consistent across modules.
- skip `-Werror` check in circe-checksum since `finalize` is deprecated at java 9
- change CRC32CDigestManager to use `circe-checksum` module
- fix shading to include `circe-checksum`

--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -183,9 +183,9 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.pulsar</groupId>
-      <artifactId>pulsar-checksum</artifactId>
-      <version>1.20.0-incubating</version>
+      <groupId>org.apache.bookkeeper</groupId>
+      <artifactId>circe-checksum</artifactId>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
   <build>
@@ -224,6 +224,7 @@
                   <include>com.google.protobuf:protobuf-java</include>
                   <include>org.apache.bookkeeper:bookkeeper-common</include>
                   <include>org.apache.bookkeeper:bookkeeper-proto</include>
+                  <include>org.apache.bookkeeper:circe-checksum</include>
                   <include>org.apache.bookkeeper.stats:bookkeeper-stats-api</include>
                 </includes>
               </artifactSet>
