Build Docker image from maven
The docker image is build on the install phase, using the tarball
generated by the bookkeeper-dist-server module.

It is only built if the docker profile is enabled.
```
mvn install -Pdocker
```

This removes the need to update the docker file after each release, as
the image is automatically generated as part of the release process.

--- a/bookkeeper-dist/server/pom.xml
+++ b/bookkeeper-dist/server/pom.xml
@@ -78,7 +78,7 @@
         <version>${maven-assembly-plugin.version}</version>
         <configuration>
           <finalName>bookkeeper-server-${project.version}</finalName>
-          <attach>false</attach>
+          <attach>true</attach>
           <descriptors>
             <descriptor>../src/assemble/bin-server.xml</descriptor>
           </descriptors>
