--- a/tests/bookkeeper-server-shaded-test/pom.xml
+++ b/tests/bookkeeper-server-shaded-test/pom.xml
@@ -45,6 +45,10 @@
           <groupId>com.google.guava</groupId>
           <artifactId>guava</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.apache.pulsar</groupId>
+          <artifactId>pulsar-checksum</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
   </dependencies>
