ISSUE #915: Part 1 - Copy pulsar-checksum module as circe-checksum
Descriptions of the changes in this PR:

- this change copies the files under `com.scurrilous.circe` in pulsar-checksum module into bookkeeper as `circe-checksum`.
- this change doesn't copy files under `org.apache.pulsar` except NativeUtils. will have a subsequent change to add it.
- Move NativeUtils to `com.scurrilous.circe.utils`.
- Update notice files to respect to Trevor Robinson's change

Author: Sijie Guo <sijie@apache.org>

Reviewers: Matteo Merli <mmerli@apache.org>

This closes #916 from sijie/copy_pulsar_checksum, closes #915

--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,10 @@
   </ciManagement>
   <modules>
     <module>buildtools</module>
-    <module>bookkeeper-proto</module>
+    <module>circe-checksum</module>
     <module>bookkeeper-common</module>
     <module>bookkeeper-stats</module>
+    <module>bookkeeper-proto</module>
     <module>bookkeeper-server</module>
     <module>bookkeeper-benchmark</module>
     <module>bookkeeper-stats-providers</module>
