Docker image for testing
Contains all released versioned and the current version (from the
current source tree). The image only gets built if the docker maven
profile is enabled:

```
mvn package -Pdocker
```

Supervisord is used to start and stop bookkeeper. Each version has its
own supervisord config. The same journal and ledger directories are
used for all versions. Logs are written to per version log files in
/var/log/bookkeeper.

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -35,6 +35,7 @@
     <module>bookkeeper-server-shaded-artifact-test</module>
     <module>bookkeeper-server-shaded-test</module>
     <module>bookkeeper-server-tests-shaded-test</module>
+    <module>docker-all-version-image</module>
   </modules>
   <build>
     <plugins>
