--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,9 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <packaging>pom</packaging>
-  <parent>
-    <artifactId>distributedlog</artifactId>
-    <groupId>org.apache.distributedlog</groupId>
-    <version>0.6.0-SNAPSHOT</version>
-  </parent>
   <groupId>org.apache.distributedlog</groupId>
   <artifactId>state-store-parent</artifactId>
+  <version>0.6.0-SNAPSHOT</version>
   <name>Apache DistributedLog :: IO :: State Store :: Parent</name>
   <url>http://maven.apache.org</url>
   <properties>
@@ -42,6 +38,11 @@
     <slf4j.version>1.7.25</slf4j.version>
     <!-- test dependencies -->
     <junit.version>4.12</junit.version>
+    <!-- plugin dependencies -->
+    <findbugs-maven-plugin.version>3.0.3</findbugs-maven-plugin.version>
+    <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
+    <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
+    <puppycrawl.checkstyle.version>6.19</puppycrawl.checkstyle.version>
   </properties>
 
   <modules>
@@ -149,4 +150,24 @@
     </dependency>
     
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <version>${findbugs-maven-plugin.version}</version>
+        <configuration>
+          <excludeFilterFile>${session.executionRootDirectory}/distributedlog-build-tools/src/main/resources/distributedlog/findbugsExclude.xml</excludeFilterFile>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
