Add license check to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,8 @@ before_install:
 
 script:
   - travis_retry mvn --batch-mode clean apache-rat:check compile spotbugs:check
+  - dev/check-binary-license ./bookkeeper-dist/all/target/bookkeeper-all-4.7.0-SNAPSHOT-bin.tar.gz
+  - dev/check-binary-license ./bookkeeper-dist/server/target/bookkeeper-server-4.7.0-SNAPSHOT-bin.tar.gz
 # Disabled the tests here. Since tests are running much slower on Travis than on Jenkins
 #  - ./dev/ticktoc.sh "mvn --batch-mode clean package"
 
